[220715] 예매하기 페이지 수정

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
   <!-- style css -->
   <link rel="stylesheet" href="./css/basic.css">
   <link rel="stylesheet" href="./css/style.css">
-  <link rel="stylesheet" href="./css/tablet_style.css">
-  <link rel="stylesheet" href="./css/pc_style.css">
+  <link rel="stylesheet" media="screen and (min-width: 768px)" href="./css/tablet_style.css">
+  <link rel="stylesheet" media="screen and (min-width: 1440px)" href="./css/pc_style.css">
 </head>
 <body>
   <!-- skip navigation -->
