--- a/tiketting/tiketing.html
+++ b/tiketting/tiketing.html
@@ -209,13 +209,151 @@
                   <li>홍대입구</li>
                 </ul>
               </li>
-              <li>경기/인천(46)</li>
-              <li>충청/대전(11)</li>
-              <li>전라/광주(10)</li>
-              <li>경북/대구(17)</li>
-              <li>경남/부산/울산(25)</li>
-              <li>강원(4)</li>
-              <li>제주(4)</li>
+              <li>경기/인천(46)
+                <ul class="tiketing-zone">
+                  <li>광교아울렛</li>
+                  <li>광명(광명사거리)</li>
+                  <li>광명아울렛</li>
+                  <li>광주터미널</li>
+                  <li>구리아울렛</li>
+                  <li>동탄</li>
+                  <li>라페스타</li>
+                  <li>마석</li>
+                  <li>별내</li>
+                  <li>병점</li>
+                  <li>부천(신중동역)</li>
+                  <li>부천역</li>
+                  <li>부평</li>
+                  <li>부평갈산</li>
+                  <li>부평역사</li>
+                  <li>북수원(천천동)</li>
+                  <li>산본피트인</li>
+                  <li>서수원</li>
+                  <li>성남중앙(신흥역)</li>
+                  <li>센트럴락</li>
+                  <li>송탄</li>
+                  <li>수원(수원역)</li>
+                  <li>수지</li>
+                  <li>시화</li>
+                  <li>시흥장현</li>
+                  <li>안산</li>
+                  <li>안산고잔</li>
+                  <li>안성</li>
+                  <li>안양(안양역)</li>
+                  <li>안양일번가</li>
+                  <li>양주고읍</li>
+                  <li>영종하늘도시</li>
+                  <li>오산(원동)</li>
+                  <li>용인기흥</li>
+                  <li>용인역북</li>
+                  <li>위례</li>
+                  <li>의정부민락</li>
+                  <li>인덕원</li>
+                  <li>인천아시아드</li>
+                  <li>인천터미널</li>
+                  <li>주엽</li>
+                  <li>진접</li>
+                  <li>파주운정</li>
+                  <li>판교(창조경제밸리)</li>
+                  <li>평톨(범계역)</li>
+                  <li>평택비전(뉴코아)</li>
+                  <li>하남미사</li>
+                  <li>향남</li>
+                </ul>
+              </li>
+              <li>충청/대전(11)
+                <ul class="tiketing-zone">
+                  <li>당진</li>
+                  <li>대전(백화점)</li>
+                  <li>대전둔산(월평동)</li>
+                  <li>대전센트럴</li>
+                  <li>서산</li>
+                  <li>서청주(아울렛)</li>
+                  <li>아산터미널</li>
+                  <li>천안불당</li>
+                  <li>청주용암</li>
+                  <li>충주(모다아울렛)</li>
+                </ul>
+              </li>
+              <li>전라/광주(10)
+                <ul class="tiketing-zone">
+                  <li>광주(백화점)</li>
+                  <li>광주광산</li>
+                  <li>군산나운</li>
+                  <li>군산몰</li>
+                  <li>수완(아울렛)</li>
+                  <li>익산모현</li>
+                  <li>전주(백화점)</li>
+                  <li>전주송천</li>
+                  <li>전주평화</li>
+                  <li>충장로</li>
+                </ul>
+              </li>
+              <li>경북/대구(17)
+                <ul class="tiketing-zone">
+                  <li>경주</li>
+                  <li>경주황성</li>
+                  <li>구미공단</li>
+                  <li>대구광장</li>
+                  <li>대구을하</li>
+                  <li>대구현풍</li>
+                  <li>동성로</li>
+                  <li>상인</li>
+                  <li>상주</li>
+                  <li>성서</li>
+                  <li>영주</li>
+                  <li>영천</li>
+                  <li>포항</li>
+                  <li>프리미엄구미센트럴</li>
+                  <li>프리미엄만경</li>
+                  <li>프리미엄안동</li>
+                  <li>프리미엄안칠곡</li>
+                </ul>
+              </li>
+              <li>경남/부산/울산(25)
+                <ul class="tiketing-zone">
+                  <li>거창</li>
+                  <li>광복</li>
+                  <li>김혜부원</li>
+                  <li>김혜아울렛(장유)</li>
+                  <li>대영</li>
+                  <li>통례</li>
+                  <li>동부산아울렛</li>
+                  <li>마산(합성동)</li>
+                  <li>부산명지</li>
+                  <li>부산본점</li>
+                  <li>사천</li>
+                  <li>서면(전포동)</li>
+                  <li>센텀시티</li>
+                  <li>양산물금</li>
+                  <li>엠비씨네(진주)</li>
+                  <li>오투(부산대)</li>
+                  <li>울산(백화점)</li>
+                  <li>울산성남</li>
+                  <li>진주혁신(롯데몰)</li>
+                  <li>진해</li>
+                  <li>창원</li>
+                  <li>통영</li>
+                  <li>프리미엄경남대</li>
+                  <li>프리미엄진주</li>
+                  <li>프리미엄해운대</li>
+                </ul>
+              </li>
+              <li>강원(04)
+                <ul class="tiketing-zone">
+                  <li>동해</li>
+                  <li>속초</li>
+                  <li>원주무실</li>
+                  <li>춘천</li>
+                </ul>
+              </li>
+              <li>제주(03)
+                <ul class="tiketing-zone">
+                  <li>서귀포</li>
+                  <li>제주삼화지구</li>
+                  <li>제주아라</li>
+                </ul>
+              </li>
               <li class="select_theater">
                 영화관을<br>선택해주세요
               </li>        
@@ -398,10 +536,10 @@
             <!-- <p class="nomovie">일시선택</p> -->
             <ul>
               <li>
-                <span>극장</span><em>선택극장</em>
+                <span>극장</span><em id="selectTheater">선택극장</em>
               </li>
               <li>
-                <span>일시</span><em>선택일시</em>
+                <span>일시</span><em id="selectDay">선택일시</em>
               </li>
               <li>
                 <span>상영관</span><em>선택상영관</em>
@@ -453,6 +591,7 @@
   <!-- go to up -->
   <button id="goToTop"><span class="blind">위로</span></button>
   <script src="../js/basic.js"></script>
+  <!-- <script src="./js/nowDay.js"></script> -->
   <script src="./js/tiketing.js"></script>
 </body>
 </html>
