[220718] 영화페이지&예매하기 수정

--- a/tiketting/tiketing.html
+++ b/tiketting/tiketing.html
@@ -183,7 +183,7 @@
 
             <ul class="tiketing-area show">
               <li>MY 영화관</li>
-              <li>서울(23)
+              <li data-active="off">서울(23)
                 <ul class="tiketing-zone">
                   <li>가산디지털</li>
                   <li>가양</li>
@@ -209,7 +209,7 @@
                   <li>홍대입구</li>
                 </ul>
               </li>
-              <li>경기/인천(46)
+              <li data-active="off">경기/인천(46)
                 <ul class="tiketing-zone">
                   <li>광교아울렛</li>
                   <li>광명(광명사거리)</li>
@@ -261,7 +261,7 @@
                   <li>향남</li>
                 </ul>
               </li>
-              <li>충청/대전(11)
+              <li data-active="off">충청/대전(11)
                 <ul class="tiketing-zone">
                   <li>당진</li>
                   <li>대전(백화점)</li>
@@ -275,7 +275,7 @@
                   <li>충주(모다아울렛)</li>
                 </ul>
               </li>
-              <li>전라/광주(10)
+              <li data-active="off">전라/광주(10)
                 <ul class="tiketing-zone">
                   <li>광주(백화점)</li>
                   <li>광주광산</li>
@@ -289,7 +289,7 @@
                   <li>충장로</li>
                 </ul>
               </li>
-              <li>경북/대구(17)
+              <li data-active="off">경북/대구(17)
                 <ul class="tiketing-zone">
                   <li>경주</li>
                   <li>경주황성</li>
@@ -310,7 +310,7 @@
                   <li>프리미엄안칠곡</li>
                 </ul>
               </li>
-              <li>경남/부산/울산(25)
+              <li data-active="off">경남/부산/울산(25)
                 <ul class="tiketing-zone">
                   <li>거창</li>
                   <li>광복</li>
@@ -339,7 +339,7 @@
                   <li>프리미엄해운대</li>
                 </ul>
               </li>
-              <li>강원(04)
+              <li data-active="off">강원(04)
                 <ul class="tiketing-zone">
                   <li>동해</li>
                   <li>속초</li>
@@ -347,7 +347,7 @@
                   <li>춘천</li>
                 </ul>
               </li>
-              <li>제주(03)
+              <li data-active="off">제주(03)
                 <ul class="tiketing-zone">
                   <li>서귀포</li>
                   <li>제주삼화지구</li>
