[220718] basic.css수정 및 예매하기 수정

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <h1 class="logo"><a href="./index.html"><span class="blind">롯데시네마</span></a></h1>
     <!-- gnb -->
     <ul id="gnb">
-      <li>
+      <li class="link">
         <a href="./tiketting/tiketing.html">예매</a>
         <ul>
           <li><a href="./tiketting/tiketing.html">예매하기</a></li>
@@ -55,7 +55,7 @@
           <li><a href="#">할인안내</a></li>
         </ul>
       </li>
-      <li>
+      <li class="link">
         <a href="./movie/movie.html">영화</a>
         <ul>
           <li><a href="./movie/movie.html">홈</a></li>
@@ -108,7 +108,7 @@
         <div class="x_btn"><span class="blind">닫기</span></div>
       </div>
       <ul class="m_gnb-menu">
-        <li><a href="./movie/movie.html">영화</a></li>
+        <li class="link"><a href="./movie/movie.html">영화</a></li>
         <li><a href="#">영화관</a></li>
         <li><a href="#">스페셜관</a></li>
         <li><a href="#">이벤트</a></li>
@@ -123,7 +123,7 @@
       <ul class="m_gnb-utill">
         <li><a href="#">로그인</a></li>
         <li><a href="#">회원가입</a></li>
-        <li><a href="./tiketting/tiketing.html">바로예매</a></li>
+        <li class="link"><a href="./tiketting/tiketing.html">바로예매</a></li>
       </ul>
     </nav>
 
