--- a/movie/movie.html
+++ b/movie/movie.html
@@ -24,7 +24,7 @@
     <h1 class="logo"><a href="../"><span class="blind">롯데시네마</span></a></h1>
     <!-- gnb -->
     <ul id="gnb">
-      <li>
+      <li class="link">
         <a href="../tiketting/tiketing.html">예매</a>
         <ul>
           <li><a href="../tiketting/tiketing.html">예매하기</a></li>
@@ -32,8 +32,8 @@
           <li><a href="#">할인안내</a></li>
         </ul>
       </li>
-      <li>
-        <a href="#">영화</a>
+      <li class="link">
+        <a href="./movie.html">영화</a>
         <ul>
           <li><a href="#">홈</a></li>
           <li><a href="#">현재상영작</a></li>
@@ -85,7 +85,7 @@
         <div class="x_btn"><span class="blind">닫기</span></div>
       </div>
       <ul class="m_gnb-menu">
-        <li><a href="./movie.html">영화</a></li>
+        <li class="link"><a href="./movie.html">영화</a></li>
         <li><a href="#">영화관</a></li>
         <li><a href="#">스페셜관</a></li>
         <li><a href="#">이벤트</a></li>
@@ -100,7 +100,7 @@
       <ul class="m_gnb-utill">
         <li><a href="#">로그인</a></li>
         <li><a href="#">회원가입</a></li>
-        <li><a href="../tiketting/tiketing.html">바로예매</a></li>
+        <li class="link"><a href="../tiketting/tiketing.html">바로예매</a></li>
       </ul>
     </nav>
     <!-- utill -->
