--- a/tiketting/tiketing.html
+++ b/tiketting/tiketing.html
@@ -25,7 +25,7 @@
     <h1 class="logo"><a href="../"><span class="blind">롯데시네마</span></a></h1>
     <!-- gnb -->
     <ul id="gnb">
-      <li>
+      <li class="link">
         <a href="./tiketing.html">예매</a>
         <ul>
           <li><a href="./tiketing.html">예매하기</a></li>
@@ -33,7 +33,7 @@
           <li><a href="#">할인안내</a></li>
         </ul>
       </li>
-      <li>
+      <li class="link">
         <a href="../movie/movie.html">영화</a>
         <ul>
           <li><a href="../movie/movie.html">홈</a></li>
@@ -86,7 +86,7 @@
         <div class="x_btn"><span class="blind">닫기</span></div>
       </div>
       <ul class="m_gnb-menu">
-        <li><a href="../movie/movie.html">영화</a></li>
+        <li class="link"><a href="../movie/movie.html">영화</a></li>
         <li><a href="#">영화관</a></li>
         <li><a href="#">스페셜관</a></li>
         <li><a href="#">이벤트</a></li>
@@ -101,7 +101,7 @@
       <ul class="m_gnb-utill">
         <li><a href="#">로그인</a></li>
         <li><a href="#">회원가입</a></li>
-        <li><a href="#">바로예매</a></li>
+        <li class="link"><a href="#">바로예매</a></li>
       </ul>
     </nav>
     <!-- utill -->
