[220807] 슬라이드 수정

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         <p>지금 가장 인기있는 작품을 소개합니다.</p>
       </div>
       <div class="best_movie-wrap">
-        <div class="best_movie-container">
+        <div class="best_movie-container" data-position="0">
           <div class="best_movie-content">
             <div class="best_movie-img">
               <img src="./images/movie_1.jpg" alt="탑건: 매버릭">
@@ -244,10 +244,23 @@
             <p>예매율 1.9%</p>
             <span class="best_movie-sub_txt best_movie-sub_txt-star">8.2</span>
           </div>
+          <div class="best_movie-content">
+            <div class="best_movie-img">
+              <img src="./images/movie_4.jpg" alt="마녀2">
+              <div class="best_movie-img-over">
+                <a href="#" class="ticketing">예매하기</a>
+                <a href="#" class="movie_more">상세보기</a>
+                <button class="like"><span class="blind">좋아요</span></button>
+              </div>
+            </div>
+            <h3 class="best_movie-tit"><a href="#">마녀(魔女) Part2. The Other One</a></h3>
+            <p>예매율 1.9%</p>
+            <span class="best_movie-sub_txt best_movie-sub_txt-star">8.2</span>
+          </div>
         </div>
         <div class="slide-arrow">
-          <div class="slide-prev"><span class="blind">이전</span></div>
-          <div class="slide-next"><span class="blind">다음</span></div>
+          <div class="slide-prev prevBtn"><span class="blind">이전</span></div>
+          <div class="slide-next nextBtn"><span class="blind">다음</span></div>
         </div>
         <ul class="main-pagination">
           <li></li>
@@ -267,7 +280,7 @@
       </ul>
       <ul class="preview-container">
         <li id="preview1" class="preview-content active">
-          <div class="preview-box">
+          <div class="preview-box" data-position="0">
             <div class="preview-img">
               <img src="./images/preview_img1.png" alt="체리마호 스폐셜 GV">
             </div>
@@ -313,7 +326,7 @@
         <p>새로 함께하는 영화들을 만나보세요</p>
       </div>
       <div class="new_movie-wrap">
-        <div class="new_movie-container">
+        <div class="new_movie-container" data-position="0">
           <div class="new_movie-content">
             <div class="new_movie-img_tit">
               <img src="./images/new_1.png" alt="토르: 러브 앤 썬더">
@@ -349,10 +362,35 @@
             <p>나라의 운명을 바꿀 압도적 승리의  전투가 시작된다! 1592년 4월, 조선은 임진왜란 발발 후 단 15일만에 왜군에 한양을 빼앗기며 절체절명의 위기에 놓인다.</p>
             <a href="#" class="more">상세보기</a>
           </div>
+          <div class="new_movie-content">
+            <div class="new_movie-img_tit">
+              <img src="./images/new_1.png" alt="토르: 러브 앤 썬더">
+              <div class="new_movie-tit">
+                <em>2022.07.06 개봉<span class="d_day">d-4</span></em>
+                <h3>토르: 러브 앤 썬더</h3>
+              </div>
+            </div>
+            <p>“신을 죽이는 자, 신이 상대한다!” 슈퍼 히어로 시
+              절이여, 안녕! 이너피스를 위해 자아 찾기 여정을 
+              떠난 천둥의 신 ‘토르’ 그러나, 우주의 모든 신</p>
+            <a href="#" class="more">상세보기</a>
+          </div>
+          <div class="new_movie-content">
+            <div class="new_movie-img_tit">
+              <img src="./images/new_2.png" alt="미니언즈2">
+              <div class="new_movie-tit">
+                <em>2022.07.20 개봉<span class="d_day">d-19</span></em>
+                <h3>미니언즈 2</h3>
+              </div>
+            </div>
+            <p>세계 최고의 슈퍼 악당을 꿈꾸는 미니보스 ‘그루’와 그를 따라다니는 미니언들. 어느 날 그루는 최고의 악당 조직 ‘빌런6’의 마법 스톤을 훔치는데 성공하지만 뉴페이스 미니언 ‘오토’의 실수로 스톤을 잃어... 버리고 빌런6에게 납치까지 당한</p>
+            <a href="#" class="more">상세보기</a>
+          </div>
+          
         </div>
         <div class="slide-arrow">
-          <div class="slide-prev"><span class="blind">이전</span></div>
-          <div class="slide-next"><span class="blind">다음</span></div>
+          <div class="slide-prev prevBtn"><span class="blind">이전</span></div>
+          <div class="slide-next nextBtn"><span class="blind">다음</span></div>
         </div>
         <ul class="main-pagination">
           <li></li>
@@ -378,7 +416,37 @@
         <p>롯데시네마의 다양한 이벤트</p>
       </div>
       <div class="event-wrap">
-        <div class="event-container">
+        <div class="event-container" data-position="0">
+          <div class="event-content">
+            <a href="#">
+              <div class="event-img_box">
+                <img src="./images/event_1.png" alt="event1">
+              </div>
+              <em>영화</em>
+              <h3>'탑건:매버릭' 스페셜 포스터 이벤트</h3>
+              <p>2022.06.22 ~ 2022.07.13</p>
+            </a>
+          </div>
+          <div class="event-content">
+            <a href="#">
+              <div class="event-img_box">
+                <img src="./images/event_2.png" alt="event2">
+              </div>
+              <em>HOT</em>
+              <h3>아티스트 토크 셰퍼드 페어리</h3>
+              <p>2022.06.22 ~ 2022.07.31</p>
+            </a>
+          </div>
+          <div class="event-content">
+            <a href="#">
+              <div class="event-img_box">
+                <img src="./images/event_3.png" alt="event3">
+              </div>
+              <em>제휴할인</em>
+              <h3>토스로 영화 예매하고 지금 바로 캐...</h3>
+              <p>2022.06.01 ~ 2022.07.31</p>
+            </a>
+          </div>
           <div class="event-content">
             <a href="#">
               <div class="event-img_box">
@@ -411,8 +479,8 @@
           </div>
         </div>
         <div class="slide-arrow">
-          <div class="slide-prev"><span class="blind">이전</span></div>
-          <div class="slide-next"><span class="blind">다음</span></div>
+          <div class="slide-prev prevBtn"><span class="blind">이전</span></div>
+          <div class="slide-next nextBtn"><span class="blind">다음</span></div>
         </div>
         <ul class="main-pagination">
           <li></li>
