--- a/movie/movie.html
+++ b/movie/movie.html
@@ -398,6 +398,10 @@
             <a href="#">
               <img src="./images/poster_11.jpg" alt="브로커">
             </a>
+            <div class="movie-info">
+              <p>세탁소를 운영하지만 늘 빚에 시달리는 ‘상현’(송강호)과 베이비 박스 시설에서 일하는 보육원 출신의 ‘동수’(강동원). 거센 비가 내리는 어느 날 밤, 그들은 베이비 박스에 놓인 한 아기를 몰래 데려간다. 하지만 이튿날, 생각지 못하게 엄마 ‘소영’(이지은)이 아기 ‘우성’을 찾으러 돌아온다. 아기가 사라진 것을 안 소영이 경찰에 신고하려 하자 솔직하게 털어놓는 두 사람. 우성이를 잘 키울 적임자를 찾아 주기 위해서 그랬다는 변명이 기가 막히지만 소영은 우성이의 새 부모를 찾는 여정에 상현, 동수와 함께하기로 한다. 한편 이 모든 과정을 지켜본 형사 ‘수진’(배두나)과 후배 ‘이형사’(이주영). 이들을 현행범으로 잡고 반 년째 이어온 수사를 마무리하기 위해 조용히 뒤를 쫓는다. 베이비 박스, 그곳에서 의도치 않게 만난 이들의 예기치 못한 특별한 여정이 시작된다.</p>
+              <a href="#" class="more">자세히보기</a>
+            </div>
           </div>
           <div class="movie-text">
             <h3><a href="#">브로커</a></h3>
@@ -413,7 +417,7 @@
               <img src="./images/poster_12.jpg" alt="모어">
             </a>
             <div class="movie-info">
-              <p>세탁소를 운영하지만 늘 빚에 시달리는 ‘상현’(송강호)과 베이비 박스 시설에서 일하는 보육원 출신의 ‘동수’(강동원). 거센 비가 내리는 어느 날 밤, 그들은 베이비 박스에 놓인 한 아기를 몰래 데려간다. 하지만 이튿날, 생각지 못하게 엄마 ‘소영’(이지은)이 아기 ‘우성’을 찾으러 돌아온다. 아기가 사라진 것을 안 소영이 경찰에 신고하려 하자 솔직하게 털어놓는 두 사람. 우성이를 잘 키울 적임자를 찾아 주기 위해서 그랬다는 변명이 기가 막히지만 소영은 우성이의 새 부모를 찾는 여정에 상현, 동수와 함께하기로 한다. 한편 이 모든 과정을 지켜본 형사 ‘수진’(배두나)과 후배 ‘이형사’(이주영). 이들을 현행범으로 잡고 반 년째 이어온 수사를 마무리하기 위해 조용히 뒤를 쫓는다. 베이비 박스, 그곳에서 의도치 않게 만난 이들의 예기치 못한 특별한 여정이 시작된다.</p>
+              <p>발레리나, 뮤지컬 배우, 안무가, 작가 누군가의 자식, 친구, 연인 성소수자, 드랙퀸, 끼순이 그리고 토슈즈 신는 미친X… 이 세상 어디에도 속할 수 없는 나 인생은 쇼, 내 이름은 모어! 진짜 튀는 무대를 보여줄게!</p>
               <a href="#" class="more">자세히보기</a>
             </div>
           </div>
